# MonitorSystemCplusplus

./: CMakeLists.txt  README.md  README_eng.md  TODO.md  config_example.json  vcpkg.json
cmake/: EmbedFile.cmake
doc/: PERFORMANCE_METRICS.md
includes/clients/: LlamaServerTest.cpp  LlamaServerTest.h  LlamaTest.cpp  LlamaTest.h  OllamaTest.h  hailoOllamaTest.cpp  haoiloOllamaTest.h
includes/metrics/: Logger.cpp  Logger.h  hardwareMetrics.cpp  hardwareMetrics.h  promptmetriclogger.cpp  promptmetriclogger.h  promptmetrics.cpp  promptmetrics.h  promptmetricsLlama.h  ref.txt
includes/utils/: InferenceEngines.h  LlamaAux.cpp  LlamaAux.h  LlamaInferencer.cpp  LlamaInferencer.h  ProbabilityType.h  cpuMonitor.h  cpuTicks.h  enumConfig.h  hardwareMeasurements.cpp  hardwareMeasurements.h  inputConfiguration.h  misc.h  promptParser.h
prompt_list/: credits.txt
results/: metrics.jsonl
src/: main.cpp  maineee.txt
src/clients/: LlamaServerTest.cpp  LlamaTest.cpp  OllamaTest.cpp  hailoOllamaTest.h  haoiloOllamaTest.cpp
src/metrics/: Logger.cpp  hardwareMetrics.cpp  promptmetrics.cpp
src/utils/: LlamaInferencer.cpp  hardwareMeasurements.cpp  inputConfiguration.cpp  inputConfiguration.h  prompt_utils.cpp  prompt_utils.h
